# fpg-web

./: .gitignore  .htaccess  BibTeX.hs  KURE.hs  Main.hs  README.md  Shake.hs  fpg-web.cabal
Web/: Chione.hs
Web/Chione/: BibTeX.hs
Wed-OLD/: Chione.hs
css/: fpg.css
data/: fpg.bib
site/: About.markdown  Events.markdown  Home.markdown  Research.markdown  Software.markdown  Tools.markdown  about.markdown  about.md  events.markdown  index.markdown  index.md  older-announcements.markdown  research.markdown  research.md  software.markdown  software.md  theory.md
site/Openings/: PostDoc.markdown
site/Research/: DSLs.markdown  WorkerWrapper.markdown
site/Software/: ChalkBoard.markdown  Hood.markdown  KansasLava.markdown
site/Tools/: BlankCanvas.markdown  ChalkBoard.markdown  HERMIT.markdown  Hood.markdown  Hpc.markdown  IOReification.markdown  KURE.markdown  KansasLava.markdown  LambdaBridge.markdown  Scotty.markdown
site/Users/: AndyGill.markdown  patr1ckm.markdown
site/projects/: hermit.md  hfec.markdown  kansas-lava.markdown
site/research/: workerwrapper.markdown
site/sigplan/: status.html
site/software/: blank-canvas.markdown  chalkboard.markdown  data-reify.markdown  hermit.markdown  hermit.md  hood.markdown  hpc.md  kure.markdown  kure.md  lambda-bridge.markdown  sunroof.md
site/theory/: constrainedTypeClassInstances.md  workerwrapper.md
site/tutorials/: workerwrapper.md
site/users/: andrewfarmer.md  andygill.markdown  andygill.md  janbracker.md  neilsculthorpe.markdown  (+1 more)
template/: full.html  page.html
tmp/: Tools.markdown
(+9 files in other folders)
